# sample-return-values-application

./: .gitignore  .gitpod.yml  CMakeLists.txt  README.md  docker-compose.yml  package.json
.github/workflows/: ci.yml
contracts/: CMakeLists.txt
contracts/action_results/: CMakeLists.txt
contracts/action_results/abi/: action_results_abi.cpp
contracts/action_results/include/action_results/: action_results.hpp
contracts/action_results/src/: action_results.cpp
contracts/action_return_value/: README.txt
contracts/action_return_value/src/: action_return_value.cpp
contracts/boot/: CMakeLists.txt
contracts/boot/abi/: boot_abi.cpp
contracts/boot/include/boot/: boot.hpp
contracts/boot/src/: boot.cpp
contracts/ricardian/: action_results.clauses.md  action_results.contracts.md
contracts/sum/: CMakeLists.txt
contracts/sum/abi/: sum_abi.cpp
contracts/sum/include/sum/: sum.hpp
contracts/sum/src/: sum.cpp
contracts/system/: CMakeLists.txt  fix-system-abi.sh
contracts/system/abi/: system_abi.cpp
contracts/system/include/system/: system.hpp
contracts/system/src/: system.cpp
cypress/integration/: index.spec.js
docker/: Dockerfile  deploy_contracts.sh
docker/scripts/: deploy_contracts.sh
libraries/: CMakeLists.txt
libraries/b1os/: CMakeLists.txt
libraries/b1os/include/b1os/: wasm_abi.hpp
scripts/: build_contracts.sh  initialize.sh
src/: index.tsx
webapp/: package.json  webpack.config.js
webapp/src/: action_results_abi.wasm  index.tsx  styles.css
webapp/src/SumAction/: index.tsx
